--- a/.github/workflows/go CI.yml
+++ b/.github/workflows/go CI.yml
@@ -22,21 +22,40 @@ jobs:
 
       - name: Test
         run: go test -v ./...
-      
+
       # Login ke GitHub Container Registry (GHCR)
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}  # GITHUB_TOKEN sudah tersedia secara otomatis dalam Actions
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Build Docker image
+      # Login ke Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # Dapatkan short SHA untuk tag unik
+      - name: Get short SHA
+        id: vars
+        run: echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      # Build Docker image (dengan dua tag: GHCR dan Docker Hub)
       - name: Build Docker image
-        run: docker build -t ghcr.io/mfisya/belajar-cicd:latest .
+        run: |
+          docker build -t ghcr.io/mfisya/belajar-cicd:latest \
+                       -t mfisya/cicd:latest \
+                       -t mfisya/cicd:${{ steps.vars.outputs.short_sha }} .
 
-      # Push Docker image ke GHCR
-      - name: Push Docker image
+      # Push image ke GHCR
+      - name: Push to GHCR
         run: docker push ghcr.io/mfisya/belajar-cicd:latest
 
-    
+      # Push image ke Docker Hub (latest & SHA tag)
+      - name: Push to Docker Hub
+        run: |
+          docker push mfisya/cicd:latest
+          docker push mfisya/cicd:${{ steps.vars.outputs.short_sha }}
